--- a/newstyle.css
+++ b/newstyle.css
@@ -5,26 +5,29 @@
   background: rgb(167, 114, 164);
   color: rgb(0, 0, 0);
   opacity: 5;
-  height: 90px; /*ancho de barra de navegacion*/
-  z-index: 7; /* posisiona el elemento por encima de otros. Overlap */
-} 
+  height: 90px;
+  /*ancho de barra de navegacion*/
+  z-index: 7;
+  /* posisiona el elemento por encima de otros. Overlap */
+}
 
-.navbar-container { /* esta dentro del navbar para enlistar el menu */
-  display:flex;
-  justify-content:space-between;
+.navbar-container {
+  /* esta dentro del navbar para enlistar el menu */
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
   width: 100%;
   align-items: center;
 }
 
 .logo {
-  position:fixed;
+  position: fixed;
   top: 5px;
   right: 5px;
   font-size: 4rem;
   background-color: rgb(167, 114, 164);
-  border-style:ridge;
- 
+  border-style: ridge;
+
 }
 
 .navbar input[type="checkbox"],
@@ -58,13 +61,11 @@
 
 .showcase-area {
   height: 55vh;
-  background: linear-gradient(
-      rgba(240, 240, 240, 0.144),
-      rgba(255, 255, 255, 0.336)
-    ),
+  background: linear-gradient(rgba(240, 240, 240, 0.144),
+      rgba(255, 255, 255, 0.336)),
     url('./img/ojos.jpg');
   background-size: cover;
-  background-position:center;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -93,11 +94,11 @@
   animation: about-text-animation 1s ease-in-out forwards;
 }
 
-.titulo{
+.titulo {
   font-size: xx-large;
   text-align: center;
-  font-display:initial;
-  
+  font-display: initial;
+
 }
 
 .showcase-container {
@@ -112,7 +113,7 @@
 .navbar .menu-items li {
   margin-bottom: 1.5rem;
   font-size: 1.3rem;
-  font-weight: 500;  
+  font-weight: 500;
 }
 
 .container {
@@ -141,7 +142,7 @@
   display: flex;
   justify-content: space-between;
   background-color: rgb(247, 244, 244);
- 
+
 }
 
 .flex-container img {
@@ -278,4 +279,121 @@
   background: rgb(167, 114, 164);
 }
 
+@media (max-width: 768px) {
 
+  /* regla para el la hamburgesa  */
+  .navbar {
+    opacity: 0.90;
+  }
+
+  .navbar-container input[type="checkbox"],
+  .navbar-container .hamburger-lines {
+    display: block;
+  }
+
+  .navbar-container {
+    display: block;
+    position: relative;
+    height: 64px;
+  }
+
+  .navbar-container input {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 30px;
+    top: 20px;
+    left: 20px;
+    z-index: 5;
+    opacity: 0;
+  }
+
+  .navbar-container .hamburger-lines {
+    display: block;
+    height: 23px;
+    width: 35px;
+    position: absolute;
+    top: 17px;
+    left: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .navbar-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #333;
+  }
+
+  .navbar-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.8s ease-in-out;
+  }
+
+  .navbar-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .navbar-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .navbar .menu-items {
+    padding-top: 100px;
+    background: #fff;
+    height: 50vh;
+    width: 220px;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    margin-left: -20px;
+    padding-left: 30px;
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 5px 0px 10px 0px #aaa;
+  }
+
+  .navbar-container input[type="checkbox"]:checked~.menu-items {
+    transform: translateX(0);
+  }
+
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+    transform: rotate(35deg);
+  }
+
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
+
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+    transform: rotate(-35deg);
+  }
+
+  .salon-type:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+
+  .salon-type {
+    box-shadow: 5px 5px 10px 0 #aaa;
+  }
+
+  .img-container {
+    margin: 0;
+  }
+}
+
+@keyframes about-img-animation {
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes about-text-animation {
+  100% {
+    transform: translate(0);
+  }
+}
